# taskImageApi

./: Dockerfile  Readme.md  docker-compose.yml  env example  manage.py  pyproject.toml
imageTaskAPI/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: apps.py  authentication.py  models.py  serializers.py  services.py  singals.py  utils.py  views.py
tasks/migrations/: 0001_initial.py
